rs/src/snapshots/nixdoc__test__export_flag.snap
---
source: src/test.rs
expression: output
---
## `lib.export.exportedFunc` {#function-library-lib.export.exportedFunc}

A documented function that will be exported.

### Example

```nix
exportedFunc "test"
# => "test-result"
```

### Arguments

arg
: The input argument.

`arg`

: Function argument


## `lib.export.anotherExported` {#function-library-lib.export.anotherExported}

Another documented function.

### Arguments

x
: First value.

y
: Second value.

`x`

: Function argument


`y`

: Function argument
