rs/src/snapshots/nixdoc__test__json_output.snap
---
source: src/test.rs
expression: output
---
{"version":1,"entries":[{"prefix":"lib","category":"strings","location":"[lib/strings.nix:49](https://github.com/NixOS/nixpkgs/blob/580dd2124db98c13c3798af23c2ecf6277ec7d9e/lib/strings.nix#L49) in `<nixpkgs>`","name":"concatStrings","fn_type":null,"description":["Concatenate a list of strings.","### Example","```nix\nconcatStrings [\"foo\" \"bar\"]\n=> \"foobar\"\n```"],"example":null,"args":[]},{"prefix":"lib","category":"strings","location":"[lib/strings.nix:59](https://github.com/NixOS/nixpkgs/blob/580dd2124db98c13c3798af23c2ecf6277ec7d9e/lib/strings.nix#L59) in `<nixpkgs>`","name":"concatMapStrings","fn_type":null,"description":["Map a function over a list and concatenate the resulting strings.","### Arguments","- `f`: Function to map\n- `list`: List of values","### Example","```nix\nconcatMapStrings (x: \"a\" + x) [\"foo\" \"bar\"]\n=> \"afooabar\"\n```"],"example":null,"args":[{"Flat":{"name":"f","doc":null}},{"Flat":{"name":"list","doc":null}}]},{"prefix":"lib","category":"strings","location":"[lib/strings.nix:254](https://github.com/NixOS/nixpkgs/blob/580dd2124db98c13c3798af23c2ecf6277ec7d9e/lib/strings.nix#L254) in `<nixpkgs>`","name":"hasPrefix","fn_type":null,"description":["Determine whether a string has given prefix.","### Arguments","- `pref`: Prefix to check for\n- `str`: Input string","### Example","```nix\nhasPrefix \"foo\" \"foobar\"\n=> true\nhasPrefix \"foo\" \"barfoo\"\n=> false\n```"],"example":null,"args":[{"Flat":{"name":"pref","doc":null}},{"Flat":{"name":"str","doc":null}}]}]}
