rs/src/snapshots/nixdoc__test__let_ident_chained.snap
---
source: src/test.rs
expression: output
---
## `lib.math.divide` {#function-library-lib.math.divide}

Divides two numbers.

### Arguments

- a: The dividend
- b: The divisor

### Type

```
divide :: Int -> Int -> Int
```

`a`

: Function argument


`b`

: Function argument
