rs/src/snapshots/nixdoc__test__main.snap
---
source: src/test.rs
expression: output
---
# string manipulation functions {#sec-functions-library-strings}
String manipulation functions.

## `lib.strings.concatStrings` {#function-library-lib.strings.concatStrings}

Concatenate a list of strings.

### Example

```nix
concatStrings ["foo" "bar"]
=> "foobar"
```

Located at [lib/strings.nix:49](https://github.com/NixOS/nixpkgs/blob/580dd2124db98c13c3798af23c2ecf6277ec7d9e/lib/strings.nix#L49) in `<nixpkgs>`.

## `lib.strings.concatMapStrings` {#function-library-lib.strings.concatMapStrings}

Map a function over a list and concatenate the resulting strings.

### Arguments

- `f`: Function to map
- `list`: List of values

### Example

```nix
concatMapStrings (x: "a" + x) ["foo" "bar"]
=> "afooabar"
```

`f`

: Function argument


`list`

: Function argument


Located at [lib/strings.nix:59](https://github.com/NixOS/nixpkgs/blob/580dd2124db98c13c3798af23c2ecf6277ec7d9e/lib/strings.nix#L59) in `<nixpkgs>`.

## `lib.strings.hasPrefix` {#function-library-lib.strings.hasPrefix}

Determine whether a string has given prefix.

### Arguments

- `pref`: Prefix to check for
- `str`: Input string

### Example

```nix
hasPrefix "foo" "foobar"
=> true
hasPrefix "foo" "barfoo"
=> false
```

`pref`

: Function argument


`str`

: Function argument


Located at [lib/strings.nix:254](https://github.com/NixOS/nixpkgs/blob/580dd2124db98c13c3798af23c2ecf6277ec7d9e/lib/strings.nix#L254) in `<nixpkgs>`.
