rs/src/snapshots/nixdoc__test__main_minimal.snap
---
source: src/test.rs
expression: output
---
## `concatStrings` {#concatStrings}

Concatenate a list of strings.

### Example

```nix
concatStrings ["foo" "bar"]
=> "foobar"
```

## `concatMapStrings` {#concatMapStrings}

Map a function over a list and concatenate the resulting strings.

### Arguments

- `f`: Function to map
- `list`: List of values

### Example

```nix
concatMapStrings (x: "a" + x) ["foo" "bar"]
=> "afooabar"
```

`f`

: Function argument


`list`

: Function argument


## `hasPrefix` {#hasPrefix}

Determine whether a string has given prefix.

### Arguments

- `pref`: Prefix to check for
- `str`: Input string

### Example

```nix
hasPrefix "foo" "foobar"
=> true
hasPrefix "foo" "barfoo"
=> false
```

`pref`

: Function argument


`str`

: Function argument
